# openmem

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: api_reference.md  architecture.md  data_flow.md  file_store.md  memory_report.md  prd.md  report_v1.md
openmem/: __init__.py  __main__.py  config.py  file_store.py  health_engine.py  main.py  openmem.json.example  read_engine.py  write_engine.py
openmem-mcp/: README.md  config.py  health_engine.py  llm_client.py  main.py  openmem.json  read_engine.py  write_engine.py
openmem-mcp/tests/: conftest.py  test_config.py  test_file_store.py  test_health_engine.py  test_llm_client.py  test_main.py  test_read_engine.py  test_write_engine.py
test_wiki/: 目录.md
tests/: conftest.py  test_config.py  test_file_store.py  test_health_engine.py  test_llm_client.py  test_main.py  test_mcp_integration.py  test_read_engine.py  test_write_engine.py
