[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmem-mcp"
version = "0.1.0"
description = "LLM驱动的个人Wiki记忆MCP工具"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "openai>=1.0.0",
    "python-frontmatter>=1.0.0",
    "mistune>=3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false
